[package]
name = "hexagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = { version = "1.4", features = ["serde"] }
kanal = "0.1.0-pre8"
log = "0.4"
once_cell = "1.17"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
ustr = "0.9"
